# testjob_tetrika

./: README.md  pyproject.toml  task_1.py  task_2.py  task_2_async.py  task_3.py
